# QuiteReads

./: .gitignore  ARCHITECTURE_CANVAS.md  CLAUDE.md  COMPLETION_PLAN.md  DATABASE_MANAGEMENT.md  MIGRATION_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: test-engineer.md
alembic/: env.py
alembic/versions/: fb7e860508b1_initial_migration_create_experiments_.py  fdd0d88e5d34_initial_schema.py
app/api/: README.md  dependencies.py  main.py
app/application/: experiment_manager.py  training_runner.py  training_status.py
app/core/: configuration.py  entities.py  experiments.py  metrics.py
app/domain/: __init__.py
app/infrastructure/: README.md  __init__.py  database.py  models.py
app/utils/: exceptions.py  types.py
checkpoints/checkpoints/: epoch=1-step=314.ckpt  epoch=7-step=1256.ckpt
data/: README.md
docs/: copied paper.docx  deployment_diagram.puml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/.lovable/: plan.md
frontend/src/: App.tsx  index.css
project-notes/01-learnings/: 2026-01-20-ASYNC_VS_MULTIP.md  2026-01-20-REST_API.md  2026-01-20-fastapi-api-learning-plan.md  2026-01-20-type_alias.md  2026-01-21-Clean_Architecture_Data_Flow.md  2026-01-21-Creating_My_First_Claude_Code_Skill.md  2026-01-21-Dependency_Injection.md  2026-01-21-FastAPI_DI_Fundamentals.md  2026-01-21-FastAPI_DI_Step_By_Step_Traces.md  2026-01-21-fast-api-basics.md  2026-01-23-Factory_Functions.md  2026-01-30-Metrics_Persistence_And_Collection.md  README.md
project-notes/02-mistakes-and-fixes/: 2026-01-21-pydantic-examples-list-format.md  README.md  (+2 more)
scripts/: backup_database.py  check_new_schema.py  check_schema.py  copy_data.py  create_db.py  import_historical_experiments.py  migrate_data.py  migrate_data_v2.py  partition_data.py  real_data_persistence_test.py  smoke_test_federated_persistence.py  smoke_test_federated_real.py  smoke_test_persistence.py  test_connection.py  validate_infrastructure.py  verify_import.py  verify_phase1_acceptance.py
(+151 files in other folders)
