# trunk-ignore-all(taplo)
[project]
name = "quitereads"
version = "0.1.0"
description = "FYP Dashboard: QuiteReads Federated Learning Book Recommender"
requires-python = ">=3.12"
dependencies = [
    "flwr==1.25.0",
    "pyarrow>=23.0.0",
    "pypdf>=6.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# File selection for hatchling (fixes error)
[tool.hatch.build.targets.wheel]
packages = ["backend"]

# uv tool config
[tool.uv]
dev-dependencies = [
  "fastapi[standard]",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]",
  "alembic",
  "pydantic-settings",
  "pandas",
  "numpy",
  "torch",
  "lightning==2.6.1",
  "flwr[simulation]",
  "pytest",
  "pytest-asyncio",
  "httpx",
  "python-multipart",
  "pytest-cov",
  "black",
  "isort",
  "mypy",
  "ruff",
  "asyncpg",
  "aiosqlite",
  "langchain",
  "langchain-google-genai",
  "python-dotenv",
]

# Pytest config
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
